Changed location of promotion line.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
       00:00
     </div>
 
+    <!-- Promotion line -->
+    <p id="promoLine">Stream BTS - Zero O'Clock on YouTube and Spotify now!</p>
+
+    <!-- Promotion links -->
+    <div id="promoLinks">
+      <a href="https://www.youtube.com/embed/Nr3ot5gSvkM">
+        <img src="youtubeButton.png" alt="YouTube Button">
+      </a>
+
+      <a href="https://open.spotify.com/track/4AlihYDqxXshKhvh5tnMfP">
+        <img src="spotifyButton.png" alt="Spotify Button">
+      </a>
+    </div>
+
     <!-- Main content -->
     <div id="mainContent">
       <p id="contentL1">Those days...</p>
@@ -25,9 +39,6 @@
     <div class="albumTitle" id="albumBottom">
       00:00
     </div>
-
-    <!-- Promotion line -->
-    <p id="promoLine">Stream BTS - Zero O'Clock on YouTube and Spotify now!</p>
 
     <!-- Promotion links -->
     <div id="promoLinks">
