Change links to open in a different tab.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <!-- Promotion links -->
     <div id="promoLinks">
-      <a href="https://www.youtube.com/embed/Nr3ot5gSvkM">
+      <a target="_blank" href="https://www.youtube.com/embed/Nr3ot5gSvkM">
         <img src="youtubeButton.png" alt="YouTube Button">
       </a>
 
-      <a href="https://open.spotify.com/track/4AlihYDqxXshKhvh5tnMfP">
+      <a target="_blank" href="https://open.spotify.com/track/4AlihYDqxXshKhvh5tnMfP">
         <img src="spotifyButton.png" alt="Spotify Button">
       </a>
     </div>
@@ -42,11 +42,11 @@
 
     <!-- Promotion links -->
     <div id="promoLinks">
-      <a href="https://www.youtube.com/embed/Nr3ot5gSvkM">
+      <a target="_blank" href="https://www.youtube.com/embed/Nr3ot5gSvkM">
         <img src="youtubeButton.png" alt="YouTube Button">
       </a>
 
-      <a href="https://open.spotify.com/track/4AlihYDqxXshKhvh5tnMfP">
+      <a target="_blank" href="https://open.spotify.com/track/4AlihYDqxXshKhvh5tnMfP">
         <img src="spotifyButton.png" alt="Spotify Button">
       </a>
     </div>
