Changed link for YouTube promotional link.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Promotion links -->
     <div id="promoLinks">
-      <a target="_blank" href="https://www.youtube.com/embed/Nr3ot5gSvkM">
+      <a target="_blank" href="https://www.youtube.com/watch?v=Nr3ot5gSvkM">
         <img src="youtubeButton.png" alt="YouTube Button">
       </a>
 
@@ -42,7 +42,7 @@
 
     <!-- Promotion links -->
     <div id="promoLinks">
-      <a target="_blank" href="https://www.youtube.com/embed/Nr3ot5gSvkM">
+      <a target="_blank" href="https://www.youtube.com/watch?v=Nr3ot5gSvkM">
         <img src="youtubeButton.png" alt="YouTube Button">
       </a>
 
